--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -100,12 +100,12 @@
                         android:layout_height="wrap_content" />
 
 
-
                 </LinearLayout>
 
                 <TextView
                     android:padding="12dp"
                     android:textSize="13sp"
+                    android:textAlignment="center"
                     android:lineSpacingMultiplier="1.5"
                     android:layout_marginTop="10dp"
                     android:text="@string/letra_himno"
@@ -119,7 +119,7 @@
     </android.support.v4.widget.NestedScrollView>
 
     <android.support.design.widget.FloatingActionButton
-        android:src="@drawable/ic_fav"
+        android:src="@drawable/ic_share"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:elevation="6dp"
@@ -127,5 +127,14 @@
         app:layout_anchor="@id/app_bar_layout"
         app:layout_anchorGravity="bottom|right|end"
         />
+
+      <Button
+        android:id="@+id/btn_share"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        app:elevation="6dp"
+        app:layout_anchor="@id/app_bar_layout"
+        app:layout_anchorGravity="bottom|right|end" />
 
 </android.support.design.widget.CoordinatorLayout>
