--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,19 +65,10 @@
                 android:orientation="vertical"
                 >
 
-            <!--   <TextView
-                 android:padding="12dp"
-                 android:textSize="24sp"
-                 android:layout_marginTop="10dp"
-                 android:textStyle="bold"
-                 android:textColor="@color/colorPrimaryText"
-                 android:text="@string/titulo_himno"
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content" /> -->
-
                 <LinearLayout
                     android:orientation="horizontal"
                     android:padding="12dp"
+                    android:gravity="center"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
@@ -89,7 +80,7 @@
                         android:layout_height="wrap_content" />
 
                     <TextView
-                        android:layout_gravity="center_vertical"
+                        android:layout_gravity="left"
                         android:padding="1dp"
                         android:textSize="19sp"
                         android:textStyle="bold"
@@ -103,20 +94,59 @@
                 </LinearLayout>
 
                 <TextView
-                    android:padding="12dp"
-                    android:textSize="13sp"
+                    android:padding="10dp"
+                    android:textSize="18sp"
+                    android:textColor="@color/colorPrimaryText"
                     android:textAlignment="center"
                     android:lineSpacingMultiplier="1.5"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="12dp"
                     android:text="@string/letra_himno"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
+                <!-- Botones del reproductor -->
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    android:layout_alignParentBottom="true"
+                    >
+
+                    <Button
+                        android:id="@+id/btn_play"
+                        android:layout_weight="0"
+                        android:layout_width="50dp"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/ic_play"/>
+
+                    <Button
+                        android:id="@+id/btn_pause"
+                        android:layout_weight="0"
+                        android:layout_width="50dp"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/ic_pause"/>
+
+                    <Button
+                        android:id="@+id/btn_stop"
+                        android:layout_weight="0"
+                        android:layout_marginBottom="0dp"
+                        android:layout_width="50dp"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/ic_stop"/>
+
+                </LinearLayout>
             </LinearLayout>
+
 
         </android.support.v7.widget.CardView>
 
+
     </android.support.v4.widget.NestedScrollView>
+
+
+    <!-- Boton compartir -->
 
     <android.support.design.widget.FloatingActionButton
         android:src="@drawable/ic_share"
@@ -138,3 +168,7 @@
         app:layout_anchorGravity="bottom|right|end" />
 
 </android.support.design.widget.CoordinatorLayout>
+
+
+
+
