--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -116,6 +116,7 @@
 
                     <Button
                         android:id="@+id/btn_play"
+                        android:onClick="clkplay"
                         android:layout_weight="0"
                         android:layout_width="50dp"
                         android:layout_height="wrap_content"
@@ -123,6 +124,7 @@
 
                     <Button
                         android:id="@+id/btn_pause"
+                        android:onClick="clkpause"
                         android:layout_weight="0"
                         android:layout_width="50dp"
                         android:layout_height="wrap_content"
@@ -130,6 +132,7 @@
 
                     <Button
                         android:id="@+id/btn_stop"
+                        android:onClick="clkstop"
                         android:layout_weight="0"
                         android:layout_marginBottom="0dp"
                         android:layout_width="50dp"
